<resources>

    <string name="app_name">Shift into Sleep</string>


    <string name="vibration">Vibration</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="language">Language</string>
    <string name="change">Change</string>
    <string name="profile">Profile</string>

    <string name="log_out">Log Out</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="music_volume">Music Volume</string>
    <string name="brightness">Brightness</string>

    <string name="english">English</string>
    <string name="spanish">Spanish</string>

    <string name="title_activity_login">log out</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">log in</string>


    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="personal_data">Personal Data</string>
    <string name="edit_work_schedule">Edit Work Schedule</string>
    <string name="night_shift">Night Shift</string>
    <string name="insomnia">Insomnia</string>
    <string name="apnea">Apnea</string>
    <string name="start_recording">Start Recording</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="helping_you_sleep_since_2016">Helping you sleep since 2016</string>
    <string name="you_should_wake_at">You should wake at</string>
    <string name=""></string>
    <string name="show_history">Show History</string>
    <string name="sleep_apnea">Sleep Apnea</string>
    <string name="sleepwalking">Sleepwalking</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="jet_lag">Jet Lag</string>
    <string name="narcolepsy">Narcolepsy</string>
    <string name="night_terrors">Night Terrors</string>
    <string name="restless_legs_syndrome">Restless Legs Syndrome</string>
    <string name="lullabies_arent">Lullabies aren\'t just for babies, they\'re perfect for adults too. Listening to relaxing music before bed is proven to help with disorders by improving sleep quality and quantity. Relaxing before sleeping helps your brain produces organized theta waves which make you feel as if you are lightly dreaming. After ten minutes of this, your brain produces sleep spindles, considered sleeping.</string>
    <string name="music">Music</string>
    <string name="music_click_to_play">Music - click to play</string>


</resources>