<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cidseuser.shiftintosleep.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age"
        android:id="@+id/textView"
        android:layout_marginStart="23dp"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weight"
        android:id="@+id/textView2"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/height"
        android:id="@+id/textView3"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gender"
        android:id="@+id/textView4"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_above="@+id/textView2"
        android:layout_toEndOf="@+id/textView4"
        android:enabled="false"
        android:contextClickable="false"
        android:textIsSelectable="false"
        android:visibility="visible"
        android:clickable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignStart="@+id/editText"
        android:textIsSelectable="true"
        android:contextClickable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_above="@+id/textView4"
        android:layout_alignStart="@+id/editText2"
        android:contextClickable="true" />

    <EditText
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:inputType="text"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignEnd="@+id/editText3"
        android:contextClickable="true" />

    <TextView
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:text="@string/personal_data"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_work_schedule"
        android:id="@+id/button"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:contextClickable="true"
        android:onClick="editButtonClicked" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night_shift"
        android:id="@+id/checkBox"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:longClickable="true"
        android:enabled="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insomnia"
        android:id="@+id/checkBox2"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:longClickable="true"
        android:enabled="true" />

</RelativeLayout>
